added dummy assignment 0 link

--- a/assignments.html
+++ b/assignments.html
@@ -25,7 +25,7 @@
         <div class="assignment">
             <h2>Assignment 0: Dummy Assignment</h2>
             <p>In this assignment, I write a python script that adds two numbers together and prints their sum to the command line.</p>
-            <a href="" class="github-link">GitHub Link</a>
+            <a href="https://github.com/danayim03/danayim-assignment-0" class="github-link">GitHub Link</a>
         </div>
 
     </section>
