modified header for index and work experience files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="header-left">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
-        <div class="header-right">MY HOBBIES ARE JOURNALING, WRITING FICTIONAL STORIES, GOING ON PINTEREST, ETC.</div>
+        <div class="header-right">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
     </header>
 
     <nav>
@@ -30,7 +30,7 @@
     <main>
         <h1>Hi, this is Dana.</h1>
         <div class="image-placeholder">
-            <img src="images/aboutMe.jpg" alt="DANA YIM">
+            <img src="aboutMe.jpg" alt="DANA YIM">
         </div>
         <p>Class: 2025<br>School: Boston University<br>Major: Computer science<br>Home Country: South Korea</p>
 
