--- a/work-experience.html
+++ b/work-experience.html
@@ -12,7 +12,7 @@
     <header>
 
         <div class="header-left">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
-        <div class="header-right">MY HOBBIES ARE JOURNALING, WRITING FICTIONAL STORIES, GOING ON PINTEREST, ETC.</div>
+        <div class="header-right">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
         
     </header>
     <nav>
