--- a/assignments.html
+++ b/assignments.html
@@ -34,6 +34,13 @@
             <a href="https://github.com/danayim03/danayim-assignment-1" class="github-link">Github Link</a>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Assignment 2: KMeans Clustering Visualization Webpage</h2>
+            <p>In this assignment, I develop an interactive web application that demonstrates the KMeans clustering algorithm using various initialization methods.</p>
+            <a href="https://github.com/danayim03/danayim-assignment-2" class="github-link">Github Link</a><br>
+            <a href="https://youtu.be/oCIWu8ZHXxI">Watch Demo Video</a>
+        </div>
+
     </section>
 
     <footer>
