--- a/assignments.html
+++ b/assignments.html
@@ -41,6 +41,12 @@
             <a href="https://youtu.be/oCIWu8ZHXxI">Watch Demo Video</a>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Assignment 3: Singular Value Decomposition</h2>
+            <p>In this assignment I implement the Singular Value Decomposition (SVD) algorithm from scratch.</p>
+            <a href="https://github.com/danayim03/danayim-assignment-3" class="github-link">Github Link</a><br>
+        </div>
+
     </section>
 
     <footer>
