--- a/assignments.html
+++ b/assignments.html
@@ -47,6 +47,13 @@
             <a href="https://github.com/danayim03/danayim-assignment-3" class="github-link">Github Link</a><br>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Assignment 4: Latent Semantic Analysis (LSA) Search Engine Webpage</h2>
+            <p>In this assignment I develop an interactive web application that implements a basic search engine using Latent Semantic Analysis (LSA).</p>
+            <a href="https://github.com/danayim03/danayim-assignment-4" class="github-link">Github Link</a><br>
+            <a href="https://youtu.be/1x3Bm8DgnJk">Watch Demo Video</a>
+        </div>
+
     </section>
 
     <footer>
