--- a/assignments.html
+++ b/assignments.html
@@ -54,6 +54,12 @@
             <a href="https://youtu.be/1x3Bm8DgnJk">Watch Demo Video</a>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Midterm: Fall 2024</h2>
+            <p>In this midterm, the goal is to predict the star rating associated with user reviews from Amazon Movie Reviews using the available features.</p>
+            <a href="https://github.com/danayim03/CS506-midterm" class="github-link">Github Link</a><br>
+        </div>
+
     </section>
 
     <footer>
