--- a/assignments.html
+++ b/assignments.html
@@ -60,6 +60,13 @@
             <a href="https://github.com/danayim03/CS506-midterm" class="github-link">Github Link</a><br>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Midterm: Fall 2024</h2>
+            <p>Assignment 6: In this assignment, I explore the impact of changing parameters on linear regression. </p>
+            <a href="https://github.com/danayim03/danayim-assignment-6" class="github-link">Github Link</a><br>
+            <a href="">Watch Demo Video</a>
+        </div>
+
     </section>
 
     <footer>
