added assignment 6 github repo and demo vid with voiceover

--- a/assignments.html
+++ b/assignments.html
@@ -61,10 +61,10 @@
         </div>
 
         <div class="assignment"></div>
-            <h2>Midterm: Fall 2024</h2>
-            <p>Assignment 6: In this assignment, I explore the impact of changing parameters on linear regression. </p>
+            <h2>Assignment 6: Interactive Linear Regression Assumptions</h2>
+            <p>In this assignment, I explore the impact of changing parameters on linear regression. </p>
             <a href="https://github.com/danayim03/danayim-assignment-6" class="github-link">Github Link</a><br>
-            <a href="">Watch Demo Video</a>
+            <a href="https://youtu.be/WOTbAAvutJE">Watch Demo Video</a>
         </div>
 
     </section>
