--- a/assignments.html
+++ b/assignments.html
@@ -67,6 +67,14 @@
             <a href="https://youtu.be/WOTbAAvutJE">Watch Demo Video</a>
         </div>
 
+        <div class="assignment"></div>
+            <h2>Assignment 7: Hypothesis Testing and Confidence Intervals in Linear Regression</h2>
+            <p>In this assignment, I extend my previous work from Assignment 6 to include hypothesis testing and confidence intervals through simulations. </p>
+            <a href="https://github.com/danayim03/danayim-assignment-7" class="github-link">Github Link</a><br>
+            <a href="https://youtu.be/DUUqJI6Lk5g">Watch Demo Video</a>
+        </div>
+
+
     </section>
 
     <footer>
