--- a/assignments.html
+++ b/assignments.html
@@ -74,7 +74,12 @@
             <a href="https://youtu.be/DUUqJI6Lk5g">Watch Demo Video</a>
         </div>
 
-
+        <div class="assignment"></div>
+            <h2>Assignment 8: Logistic Regression</h2>
+            <p>In this assignment, I explore the effect of shifting clusters in a dataset on the parameters of a logistic regression model. </p>
+            <a href="https://github.com/danayim03/danayim-assignment-8" class="github-link">Github Link</a><br>
+            <a href="https://youtube.com/shorts/OqKMM5tKkQQ">Watch Demo Video</a>
+        </div>
     </section>
 
     <footer>
