--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <h1>Projects</h1>
         <p>Details about my projects.</p>
 
-        <!-- Project 1: Example -->
+        
         <div class="assignment">
             <h2>Project 1: TerriorTinder</h2>
             <p>Developed TerriorTinder, a Tinder-like dating web app for BU students, as part of a Boston
@@ -33,12 +33,26 @@
             <a href="https://github.com/danayim03/terriorTinder" class="github-link">Github Link</a>
         </div>
 
-        <!-- Project 2: Example -->
+        
         <div class="assignment">
             <h2>Project 2: Statistical Analysis Page</h2>
             <p>Implemented three statistical analysis pages and user data pages for a live production environment using Spring Boot, MVC
                 architecture, and Tomcat server, enhancing data accessibility for users.</p>
             <a href="https://docs.google.com/presentation/d/14Tpd8nZiEb1mXqpW-LjYt24WjRaUCyyPqoXtbVVApU0/edit#slide=id.p" class="github-link">Project Link</a>
+        </div>
+
+        <div class="assignment">
+            <h2>Project 3: Anonymous Chat Platform, Perspective</h2>
+            <p>
+            Designed and developed the frontend and backend using React, Next.js, and Tailwind CSS.</p>
+            <a href="https://github.com/danayim03/Perspective" class="github-link">Github Link</a>
+        </div>
+
+        <div class="assignment">
+            <h2>Project 4: DormSoup</h2>
+            <p>
+            Working on adding a comment feature using TypeScript, React, and Tailwind CSS.</p>
+            <a href="https://github.com/DormSoup/dormsoup/tree/feature/comment" class="github-link">Github Link</a>
         </div>
 
     </section>
