--- a/assignments.html
+++ b/assignments.html
@@ -80,6 +80,13 @@
             <a href="https://github.com/danayim03/danayim-assignment-8" class="github-link">Github Link</a><br>
             <a href="https://youtube.com/shorts/OqKMM5tKkQQ">Watch Demo Video</a>
         </div>
+
+        <div class="assignment"></div>
+            <h2>Assignment 10: Image Search</h2>
+            <p>Goal: Implement a simplified version of Google Image Search.</p>
+            <a href="https://github.com/danayim03/danayim-assignment-10" class="github-link">Github Link</a><br>
+            <a href="https://youtube.com/shorts/bC1UHuJjVFI">Watch Demo Video</a>
+        </div>
     </section>
 
     <footer>
