--- a/assignments.html
+++ b/assignments.html
@@ -38,7 +38,7 @@
             <h2>Assignment 2: KMeans Clustering Visualization Webpage</h2>
             <p>In this assignment, I develop an interactive web application that demonstrates the KMeans clustering algorithm using various initialization methods.</p>
             <a href="https://github.com/danayim03/danayim-assignment-2" class="github-link">Github Link</a><br>
-            <a href="https://youtu.be/oCIWu8ZHXxI">Watch Demo Video</a>
+            <!-- <a href="https://youtu.be/oCIWu8ZHXxI">Watch Demo Video</a> -->
         </div>
 
         <div class="assignment"></div>
@@ -51,7 +51,7 @@
             <h2>Assignment 4: Latent Semantic Analysis (LSA) Search Engine Webpage</h2>
             <p>In this assignment I develop an interactive web application that implements a basic search engine using Latent Semantic Analysis (LSA).</p>
             <a href="https://github.com/danayim03/danayim-assignment-4" class="github-link">Github Link</a><br>
-            <a href="https://youtu.be/1x3Bm8DgnJk">Watch Demo Video</a>
+            <!-- <a href="https://youtu.be/1x3Bm8DgnJk">Watch Demo Video</a> -->
         </div>
 
         <div class="assignment"></div>
@@ -64,21 +64,21 @@
             <h2>Assignment 6: Interactive Linear Regression Assumptions</h2>
             <p>In this assignment, I explore the impact of changing parameters on linear regression. </p>
             <a href="https://github.com/danayim03/danayim-assignment-6" class="github-link">Github Link</a><br>
-            <a href="https://youtu.be/WOTbAAvutJE">Watch Demo Video</a>
+            <!-- <a href="https://youtu.be/WOTbAAvutJE">Watch Demo Video</a> -->
         </div>
 
         <div class="assignment"></div>
             <h2>Assignment 7: Hypothesis Testing and Confidence Intervals in Linear Regression</h2>
             <p>In this assignment, I extend my previous work from Assignment 6 to include hypothesis testing and confidence intervals through simulations. </p>
             <a href="https://github.com/danayim03/danayim-assignment-7" class="github-link">Github Link</a><br>
-            <a href="https://youtu.be/DUUqJI6Lk5g">Watch Demo Video</a>
+            <!-- <a href="https://youtu.be/DUUqJI6Lk5g">Watch Demo Video</a> -->
         </div>
 
         <div class="assignment"></div>
             <h2>Assignment 8: Logistic Regression</h2>
             <p>In this assignment, I explore the effect of shifting clusters in a dataset on the parameters of a logistic regression model. </p>
             <a href="https://github.com/danayim03/danayim-assignment-8" class="github-link">Github Link</a><br>
-            <a href="https://youtube.com/shorts/OqKMM5tKkQQ">Watch Demo Video</a>
+            <!-- <a href="https://youtube.com/shorts/OqKMM5tKkQQ">Watch Demo Video</a> -->
         </div>
     </section>
 
