--- a/assignments.html
+++ b/assignments.html
@@ -85,7 +85,7 @@
             <h2>Assignment 10: Image Search</h2>
             <p>Goal: Implement a simplified version of Google Image Search.</p>
             <a href="https://github.com/danayim03/danayim-assignment-10" class="github-link">Github Link</a><br>
-            <a href="https://youtube.com/shorts/bC1UHuJjVFI">Watch Demo Video</a>
+            <!-- <a href="https://youtube.com/shorts/bC1UHuJjVFI">Watch Demo Video</a> -->
         </div>
     </section>
 
