--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="header-left">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
         <div class="header-right">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
-    </header>
+    </header> -->
 
     <nav>
         <ul>
@@ -32,12 +31,12 @@
         <div class="image-placeholder">
             <img src="aboutMe.jpg" alt="DANA YIM">
         </div>
-        <p>Class: 2025<br>School: Boston University<br>Major: Computer science<br>Home Country: South Korea</p>
-
+        <p>I study Computer Science at BU.<br>I enjoy web app development and writing fictions.
+        <br>
     </main>
 
     <footer>
-        <p>&copy; 2024 Dana Yim. All rights reserved.</p>
+        <p>&copy; 2025 Dana Yim. All rights reserved.</p>
     </footer>
 </body>
 
