--- a/work-experience.html
+++ b/work-experience.html
@@ -9,12 +9,7 @@
 </head>
 
 <body>
-    <header>
 
-        <div class="header-left">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
-        <div class="header-right">WELCOME TO DANA YIM'S PERSONAL WEBSITE.</div>
-        
-    </header>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
@@ -38,6 +33,19 @@
             </thead>
             <tbody>
                 <tr>
+                    <td><b>Boston University</b><br>Software Engineer Intern</td>
+                    <td>
+                        <ul>
+                            <li>Developed a Python script to scrape the Montana Senate spending data to analyze superPACs patterns.</li>
+                            <li>Collaborated with BU Spark! team and MarketWatch to create interactive data visualizations using Flourish.</li>
+                            <li>Achieved 2nd place in the Audience Choice Award category at Boston University Demo Day. </li>
+                            <br>
+                            <img src="ppt-day.JPEG" alt="Team presentation" style="width: 500px; height: auto;">
+                        </ul>
+                    </td>
+                    <td>Sept – Dec 2024</td>
+                </tr>
+                <tr>
                     <td><b>FaMiliData</b><br>Software Engineer Intern</td>
                     <td>
                         <ul>
@@ -50,7 +58,7 @@
                     <td>June – Aug 2024</td>
                 </tr>
                 <tr>
-                    <td><b>SOFAR Acoustics, LLC</b><br>Data Analyst</td>
+                    <td><b>SOFAR Acoustics, LLC</b><br>Research Assistant</td>
                     <td>
                         <ul>
                             <li>Assisted in parsing and organizing large datasets using Python and Excel, improving data accessibility and enabling faster analysis for research projects.</li>
@@ -76,7 +84,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Dana Yim. All rights reserved.</p>
+        <p>&copy;  2025 Dana Yim. All rights reserved.</p>
     </footer>
 </body>
 
