--- a/contact.html
+++ b/contact.html
@@ -7,30 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="work-experience.html">Work Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="assignments.html">Assignments</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section>
-        <h1>Contact</h1><br>
+    <nav>
+        <ul>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="work-experience.html">Work Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="assignments.html">Assignments</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav><br><br><br>
+
+    <section class="orange-border">
+        <h1>Contact.</h1><br>
         <div class="contact-box">
             <p>Personal Email: <a href="mailto:danayim03@gmail.com">danayim03@gmail.com</a></p>
             <p>School Email: <a href="mailto:danayim@bu.edu">danayim@bu.edu</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/danayim1017/">danayim1017</a></p>
         </div>
-    </section>
-    
+    </section>    
 
     <footer>
-        <p>&copy; 2024 Dana Yim. All rights reserved.</p>
+        <p>&copy;  2025 Dana Yim. All rights reserved.</p>
     </footer>
 </body>
 </html>
